# SourceCLass

./: .gitignore  LICENSE  README.md  package.json
core-rust/: Cargo.toml
core-rust/src/: lib.rs  main.rs
core-rust/src/chunker/: line_chunker.rs  mod.rs  symbol_chunker.rs  token_budget.rs
core-rust/src/graph/: dependency_hints.rs  mod.rs  project_graph.rs
core-rust/src/indexer/: cache.rs  file_index.rs  hash.rs  mod.rs
core-rust/src/output/: json_writer.rs  mod.rs  project_map.rs
core-rust/src/scanner/: binary.rs  ignore.rs  language.rs  metadata.rs  mod.rs  walker.rs
docs/: cpp-native-optional.md  engine-architecture.md  json-protocol.md  python-engine.md  rust-core.md
engine-python/: analyze.py  pyproject.toml  requirements.txt
engine-python/sourceclass_engine/: cli.py  models.py
native-cpp/: CMakeLists.txt  README.md
native-cpp/include/: sourceclass_native.h
native-cpp/src/: large_file_preprocessor.cpp  syntax_hint.cpp  tokenizer.cpp
scripts/: build-rust.sh  setup-python.sh  test-engine.sh
sourceclass/ai/: anthropicProvider.ts  geminiProvider.ts  localProvider.ts  openaiProvider.ts  openrouterProvider.ts  promptRunner.ts  provider.ts  providerFactory.ts
sourceclass/cli/: commandUtils.ts  index.ts
sourceclass/core/: analysisEngine.ts  analysisPlanner.ts  chunker.ts  dependencyMapper.ts  fileClassifier.ts  languageDetector.ts  outputWriter.ts  projectScanner.ts  reportGenerator.ts  tokenEstimator.ts  types.ts
sourceclass/utils/: config.ts  errors.ts  fs.ts  (+3 more)
tests/: config.test.ts  markdown.test.ts  provider.test.ts  scanner.test.ts
(+57 files in other folders)
