[package]
name = "sourceclass-core"
version = "0.1.0"
edition = "2021"
description = "Fast local scanner and project-map generator for SourceClass."
license = "MIT"

[lib]
name = "sourceclass_core"
path = "src/lib.rs"

[[bin]]
name = "sourceclass-core"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
